--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "deploy": "next build && next export"
   },
   "dependencies": {
+    "@line/liff": "^2.9.0",
+    "bootstrap": "^4.6.0",
     "next": "10.1.3",
     "react": "17.0.2",
+    "react-bootstrap": "^1.5.2",
+    "react-bootstrap-icons": "^1.4.0",
     "react-dom": "17.0.2"
   }
 }
